First controller and Razor pages tests

--- a/SalesWebMvc/Views/Home/About.cshtml
+++ b/SalesWebMvc/Views/Home/About.cshtml
@@ -4,4 +4,9 @@
 <h2>@ViewData["Title"]</h2>
 <h3>@ViewData["Message"]</h3>
 
-<p>Use this area to provide additional information.</p>
+
+<p>Student: @ViewData["Student"]</p>
+
+<andress>
+    <strong>More information: </strong><a href="https://www.linkedin.com/in/luisrachope/">https://www.linkedin.com/in/luisrachope/</a>
+</andress>
